--- a/about.html
+++ b/about.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Us</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>About Us</title>
 </head>
 
 <body>
-    <h1>About</h1>
-    <p>
-      This site is a sample project for the <strong>awesome</strong> Git
-      tutorial <em>Learn Enough™ Git to Be Dangerous</em>.
-    </p>
+  <h1>About</h1>
+  <p>
+    This site is a sample project for the <strong>awesome</strong> Git
+    tutorial <a href="http:/learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em></a>.
+  </p>
 </body>
 
 </html>
